--- a/config/bx_web.yaml
+++ b/config/bx_web.yaml
@@ -47,6 +47,12 @@ service_objects:
         - name: accepted_jobs_folder
           value: accepted
 
+        - name: bid_window_limit_type
+          value: time_seconds
+
+        - name: bid_window_limit
+          value: 5
+
   s3:
     class: S3Service
     init_params:
@@ -155,6 +161,12 @@ data_shapes:
 
       - name: status
         datatype: int
+        required: True
+
+  job_bids_shape:
+    fields:
+      - name: job_tag
+        datatype: str
         required: True
 
   new_job_shape:
@@ -266,10 +278,10 @@ transforms:
     input_shape:        default
     output_mimetype:    text/json
 
-  test:
-    route:              /foo
+  job_bids:
+    route:              /bids
     method:             GET
-    input_shape:        default
+    input_shape:        job_bids_shape
     output_mimetype:    application/json
 
 
