--- a/config/bx_sqs.yaml
+++ b/config/bx_sqs.yaml
@@ -49,3 +49,10 @@ sources:
       handler: msg_handler
       polling_interval_seconds: 1
       max_msgs_per_cycle: 1
+
+  bxlogic-scan:
+      queue_url: https://sqs.us-east-1.amazonaws.com/543680801712/bxlogic_events
+      region: us-east-1
+      handler: scan_handler
+      polling_interval_seconds: 1
+      max_msgs_per_cycle: 1
